--- a/ZLG.CAN/ZLG.CAN.csproj
+++ b/ZLG.CAN/ZLG.CAN.csproj
@@ -4,6 +4,7 @@
 	  <TargetFrameworks>netstandard2.1;net48</TargetFrameworks>
 	  <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 </Project>
