--- a/ZLG.CAN/ZLG.CAN.csproj
+++ b/ZLG.CAN/ZLG.CAN.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net48</TargetFrameworks>
+	  <TargetFrameworks>netstandard2.1;net48;net472</TargetFrameworks>
 	  <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
 </Project>
