--- a/ZLG.CAN/ZLG.CAN.csproj
+++ b/ZLG.CAN/ZLG.CAN.csproj
@@ -4,7 +4,7 @@
 	  <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net472</TargetFrameworks>
 	  <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
